--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ span {display:block;text-align:center;}
 h1, h2 {font-family:'Alegreya Sans', sans-serif;font-weight:700;color:rgba(0,0,0,.8);margin:0;margin-bottom:5px;}
 h1 {font-size:38px;}
 h2 {font-size:28px;}
-p {font-family:'Merriweather', serif;font-size:18px;line-height:34px;color:rgba(0,0,0,.8);margin-bottom:30px;}
+p, li {font-family:'Merriweather', serif;font-size:18px;line-height:34px;color:rgba(0,0,0,.8);margin-bottom:30px;}
 span {font-family:'Alegreya Sans', sans-serif;font-size:15px;color:rgba(0,0,0,.6);margin-top:5px;margin-bottom:30px;}
 
 section img {margin-top:25px;}
