--- a/template/style-template.css
+++ b/template/style-template.css
@@ -55,26 +55,39 @@ figure {margin: 0;}
 html { font-size: 62.5%; } 
 body { font-size: 14px; font-size: 1.4rem; } /* =14px */
 h1   { font-size: 24px; font-size: 2.4rem; } /* =24px */
-
+hr { height: 2px; color:#bfbfbf; width: 100%}
 .left{ float: left;}
 .right{ float: right;}
 
 .hidden{display: none!important;}
 
+header {background:#0078c0;height:60px;width:100%;width:100%;position:fixed;z-index:999999;left:0px;top:-60px;-webkit-transition: .25s ease-in-out;-moz-transition: .25s ease-in-out;-o-transition: .25s ease-in-out;transition: .25s ease-in-out;}
+header.visual {top:0px;}
+header img {width:auto;height:46px;margin-top:7px;}
+
+footer{background: rgba(93, 93, 93,0.3);width:100%;height:64px;bottom:0;}
+footer div {margin:0 auto;padding-top:8px;}
+footer img {height:46px;position:relative;padding-right:10px;width:auto;top:3px;}
+footer a {border:none!important;}
+footer ul {margin:0;display:inline-block;border-left:2px #fff solid;padding-left:20px;}
+footer ul li img{width:auto;top:0px;}
+footer ul li{ margin:0;list-style:none;float:left;height:44px;width:44px;}
 
 /*** GENERAL ***/
 
 article {width:100%;text-align:center;}
-section {width:100%;max-width:740px;position:relative;display:inline-block;padding:0px 20px;text-align:left;margin-top:55px;}
-section:after {content:"...";display:block;text-align:center;line-height:10px;letter-spacing:25px;margin-bottom:70px;color:rgba(0,0,0,.8);font-size:18px;}
+section {width:100%;max-width:740px;position:relative;display:inline-block;padding:0px 20px;text-align:left;margin-top:20px;}
+section:not(:last-of-type):after {content:"...";display:block;text-align:center;line-height:10px;letter-spacing:25px;margin-bottom:50px;color:#333;font-size:18px;}
 img {width:100%;}
+
 span {display:block;text-align:center;}
 
-h1, h2, h3 {font-family:'Alegreya Sans', sans-serif;font-weight:700;color:rgba(0,0,0,.8);margin:0;margin-bottom:5px;}
+h1, h2, h3 {font-family:'Alegreya Sans', sans-serif;font-weight:700;color:#333;margin:0;margin-bottom:5px;}
 h1 {font-size:38px;}
 h2 {font-size:28px;}
 h3 {font-size:24px;}
-p, li {font-family:'Merriweather', serif;font-size:18px;line-height:34px;color:rgba(0,0,0,.8);margin-bottom:30px;}
+p, li, table, blockquote {font-family:'Merriweather', serif;font-size:18px;line-height:34px;color:#333;margin-bottom:30px;}
+table {font-family:'Merriweather', serif;font-size:16px;line-height:30px;color:#333;margin-bottom:30px;}
 span {font-family:'Alegreya Sans', sans-serif;font-size:15px;color:rgba(0,0,0,.6);margin-top:5px;margin-bottom:30px;}
 
 section img {margin-top:25px;}
@@ -82,19 +95,45 @@ section .fluid-width-video-wrapper {margin-bottom:35px;}
 
 a {text-decoration:none;color:inherit;}
 h1 a, h2 a, h3 a {text-decoration:underline;}
-p a {border-bottom:1px solid rgba(0,0,0,0.8);}
+p a, li a {border-bottom:1px solid #333;}
+p b a, p strong a, li b a, li strong a {border-bottom:2px solid #333;}
+
+table {width:100%;table-layout:fixed;}
+table td, table th {border:none;text-align:left;}
+table tr:not(.table_title) {border-bottom:1px solid #AAA;}
+table tr:nth-of-type(odd){background:#fdfdfd;}
+tr.table_title {background:#333!important;color:#FFF;letter-spacing:0.075em;}
+tr.table_title th {text-align:center!important;}
+
+blockquote {color:rgba(0,0,0,0.55);}
+blockquote:before {content:'“';}
+blockquote:after {content:'”';}
+
+.fuentes li {font-size:14px;font-style:italic;line-height:150%;margin-bottom:15px;}
 
 #regreso{background: #0e7cbc; border-style:none;padding:10px;border-radius: 10px; color:#fff;}
 
+.iframe {width:100%;position:relative;margin-bottom:35px;}
+.iframe iframe {width:100%!important;height:100%!important;position:absolute;left:0px;top:0px;}
+.iframe div.over_iframe {width:100%;height:100%;position:absolute;left:0px;top:0px;z-index:99999999;background:transparent;}
+
+p.subtitle {color:rgba(0,0,0,0.45);font-family:'Alegreya Sans', sans-serif;font-size:27px;}
+p.subtitle a {border-bottom:1px solid rgba(0,0,0,0.45);}
+p.quote {padding-left:10px;border-left:3px solid #555;margin-top:20px;font-size:16px;line-height:20px;}
+p.pie {border-top:1px solid #AAA;padding-top:15px;margin-top:40px;}
 
 @media (max-width:600px) {
 	h1 {font-size:32px;width:80%;}
 	h2 {font-size:24px;width:80%;}
 	h3 {font-size:20px;}
 	p, li {font-size:18px;}
-	span {font-size:14px;padding:0px 20px;}
+	table {font-size:16px;}
+	p.subtitle {font-size:23px;}
+	span {font-size:14px;padding:0px 20px;margin-bottom:20px;}
+	section img {margin-top:0px;}
 	section {margin-top:20px;}
-	section:after {margin-bottom:50px;}
+	section:not(:last-of-type):after {margin-bottom:30px;position:relative;top:-12px;}
+	div.over_iframe {display:none!important;}
 }
 
 
