--- a/trump/style.css
+++ b/trump/style.css
@@ -63,13 +63,13 @@ hr { height: 2px; color:#bfbfbf; width: 100%}
 
 header {background:#0078c0;height:60px;width:100%;width:100%;position:fixed;z-index:999999;left:0px;top:-60px;-webkit-transition: .25s ease-in-out;-moz-transition: .25s ease-in-out;-o-transition: .25s ease-in-out;transition: .25s ease-in-out;}
 header.visual {top:0px;}
-header img {width:auto;height:46px;margin-top:7px;}
+header img {width:auto;height:52px;margin-top:4px;}
 
 footer{background: rgba(93, 93, 93,0.3);width:100%;height:64px;bottom:0;}
 footer div {margin:0 auto;padding-top:8px;}
 footer img {height:46px;position:relative;padding-right:10px;width:auto;top:3px;}
 footer a {border:none!important;}
-footer ul {margin:0;display:inline-block;border-left:2px #fff solid;padding-left:20px;}
+footer ul {margin:0;display:inline-block;border-left:2px #fff solid;padding-left:20px;width:110px;}
 footer ul li img{width:auto;top:0px;}
 footer ul li{ margin:0;list-style:none;float:left;height:44px;width:44px;}
 
@@ -107,9 +107,9 @@ table tr:nth-of-type(odd){background:#fdfdfd;}
 tr.table_title {background:#333!important;color:#FFF;letter-spacing:0.075em;}
 tr.table_title th {text-align:center!important;}
 
-blockquote {color:rgba(0,0,0,0.55);}
+/*blockquote {color:rgba(0,0,0,0.55);}
 blockquote:before {content:'“';}
-blockquote:after {content:'”';}
+blockquote:after {content:'”';}*/
 
 .fuentes li {font-size:14px;font-style:italic;line-height:150%;margin-bottom:15px;}
 
@@ -138,16 +138,17 @@ nav.share a.wp {background:url(images/iconos.svg) no-repeat;background-position:
 nav.share a.em {background:url(images/colors.png) no-repeat;background-position:-80px 0px;}
 
 .tweet textarea {width:100%;resize:none;height:80px;padding:9px 10px;border-radius:10px;border:2px solid #0A377A;outline:none;}
-a.send_tweet {background:#E4032D;float:right;padding:3px 20px;font-family:'Alegreya Sans', sans-serif;font-weight:bold;color:#FFF;margin:10px 0px 20px;font-size:16px;}
+a.send_tweet {background:#E4032D;float:right;padding:5px 20px 3px;font-family:'Alegreya Sans', sans-serif;font-weight:bold;color:#FFF;margin:10px 0px 20px;font-size:16px;}
 
 .title_format {border-bottom:4px solid #E4032D;width:100%;text-align:center;height:19px;margin-bottom:45px;}
 .title_format h2 {background:#FFF;display:inline-block;padding:0px 9px;color:#E4032D;}
 
-.twitter-tweet{ text-align: center; margin: 0 auto; width: 370px !important; float: left; margin-right: 20px;}
+.twitter-tweet{width: 100% !important; margin-bottom:20px!important; margin-top:0px!important;}
 
 .calltoaction { font-weight: bold; color:#E4032D; }
 
 @media (max-width:900px) {
+
 	img.cover {margin-top:59px;margin-bottom:0px;}
 	ins {display:none;}
 	nav.share {position:relative;width:100%;font-size:8px;height:60px;left:0px;top:0px;}
@@ -158,11 +159,14 @@ a.send_tweet {background:#E4032D;float:right;padding:3px 20px;font-family:'Alegr
 @media (min-width:601px) {
 	div.grid_item {width:33%;padding-bottom:18.6%;margin-right:0.5%;margin-bottom:0.5%;}
 	div.grid_item:nth-of-type(3n) {margin-right:0px;}
+
+	div.tweets {-webkit-column-count:2; -moz-column-count:2; column-count:2;padding:0px;}
+	div.tweets .twitter-tweet:nth-of-type(17) {margin-top:280px!important;}
 }
 
 @media (max-width:600px) {
 	h1 {font-size:32px;width:80%;}
-	h2 {font-size:24px;width:80%;}
+	h2 {font-size:24px;/*width:80%;*/}
 	h3 {font-size:20px;}
 	p, li {font-size:17px;}
 	table {font-size:16px;}
