--- a/trump/style.css
+++ b/trump/style.css
@@ -132,9 +132,9 @@ img.cover {margin-top:59px;margin-bottom:30px;}
 
 nav.share {position:absolute;width:40px;left:-60px;font-size:8px;top:10px;}
 nav.share a {width:34px;height:34px;float:left;margin:5px;}
-nav.share a.fb {background:url(images/iconos.svg) no-repeat;background-position:-38px -5px;background-size:108px 114px;}
-nav.share a.tw {background:url(images/iconos.svg) no-repeat;background-position:-38px -78px;background-size:108px 114px;}
-nav.share a.wp {background:url(images/iconos.svg) no-repeat;background-position:-38px -42px;background-size:108px 114px;display:none;}
+nav.share a.fb {background:url(images/iconos.png) no-repeat;background-position:-5px -5px;background-size:42px auto;}
+nav.share a.tw {background:url(images/iconos.png) no-repeat;background-position:-5px -78px;background-size:42px auto;}
+nav.share a.wp {background:url(images/iconos.png) no-repeat;background-position:-5px -42px;background-size:42px auto;display:none;}
 nav.share a.em {background:url(images/colors.png) no-repeat;background-position:-80px 0px;}
 
 .tweet textarea {width:100%;resize:none;height:80px;padding:9px 10px;border-radius:10px;border:2px solid #0A377A;outline:none;}
