--- a/trump/style.css
+++ b/trump/style.css
@@ -91,7 +91,7 @@ p, li, table, blockquote {font-family:'Merriweather', serif;font-size:18px;line-
 table {font-family:'Merriweather', serif;font-size:16px;line-height:30px;color:#333;margin-bottom:30px;}
 span {font-family:'Alegreya Sans', sans-serif;font-size:15px;color:rgba(0,0,0,.6);margin-top:5px;margin-bottom:30px;}
 
-section img {margin-top:25px;}
+/*section img {margin-top:25px;}*/
 section .fluid-width-video-wrapper {margin-bottom:35px;}
 
 a {text-decoration:none;color:inherit;cursor:pointer;}
@@ -147,6 +147,8 @@ a.send_tweet {background:#E4032D;float:right;padding:5px 20px 3px;font-family:'A
 
 .calltoaction { font-weight: bold; color:#E4032D; }
 
+div.img_stats {/*border-bottom:4px solid #E4032D;*/position:relative;top:-10px;}
+
 @media (max-width:900px) {
 
 	img.cover {margin-top:59px;margin-bottom:0px;}
@@ -154,7 +156,6 @@ a.send_tweet {background:#E4032D;float:right;padding:5px 20px 3px;font-family:'A
 	nav.share {position:relative;width:100%;font-size:8px;height:60px;left:0px;top:0px;}
 	nav.share a {display:inline-block;}
 }
-
 
 @media (min-width:601px) {
 	div.grid_item {width:33%;padding-bottom:18.6%;margin-right:0.5%;margin-bottom:0.5%;}
