--- a/elections/style-elections.css
+++ b/elections/style-elections.css
@@ -207,7 +207,7 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .versus .hc .barra {background:#003594;}
 .versus .dt .barra {background:#EB0029;}
 
-ul.notas {list-style:none;margin:0;padding:0;border-left:2px dashed #C0C0C0;margin-left:40px;padding-top:30px;}
+ul.notas {list-style:none;margin:0;padding:0;border-left:2px dashed #C0C0C0;margin-left:40px;/*padding-top:30px;*/}
 ul.notas li {min-height:80px;position:relative;left:-40px;line-height:24px;}
 ul.notas li .img_frame {width:80px;height:80px;position:absolute;border-radius:50%;overflow:hidden;background:#F0F0F0;left:0px;top:0px;}
 ul.notas li .img_frame img {width:auto;height:100%;margin:0;position:absolute;top:-9999px;bottom:-9999px;left:-9999px;right:-9999px;margin:auto;}
