--- a/elections/style-elections.css
+++ b/elections/style-elections.css
@@ -152,16 +152,16 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 
 /*MAPA 1*/
 
-#map1 {width:100%;max-width:1280px;margin:0 auto;margin-bottom:50px;}
+#map1 {width:90%;max-width:1280px;margin:0 auto;margin-bottom:50px;}
 
-#map1 svg {width:100%;position:relative;left:-2%;}
+#map1 svg {width:100%;position:relative;left:-2.5%;}
 #map1 svg text {font-size:7px;font-family:'Alegreya Sans', sans-serif;fill:#FFF;letter-spacing:0.03em;}
 #map1 svg text.black {fill:#bfbfbf;font-weight:700;}
 #map1 svg .state {fill:#bfbfbf;stroke:#fff;stroke-width:0.07rem;-webkit-transition:.15s ease-in-out;-moz-transition:.15s ease-in-out;-o-transition:.15s ease-in-out;transition:.15s ease-in-out;}
 #map1 svg .state:hover {fill:#333;}
 #map1 svg .state:hover :after {content:"hover";background:gold;width:100px;height:100px;position:absolute;left:0px;top:0px;}
 
-#map2 {width:100%;max-width:1280px;margin:0 auto;margin-bottom:50px;}
+#map2 {width:90%;max-width:1280px;margin:0 auto;margin-bottom:50px;}
 #map2 svg {width:100%;}
 
 #map2 svg polygon, #map2 svg polyline {stroke:#FFF;stroke-width:0.12rem;}
@@ -208,10 +208,11 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .versus .dt .barra {background:#EB0029;}
 
 ul.notas {list-style:none;margin:0;padding:0;border-left:2px dashed #C0C0C0;margin-left:40px;/*padding-top:30px;*/}
-ul.notas li {min-height:80px;position:relative;left:-40px;line-height:24px;}
+ul.notas li {min-height:80px;position:relative;left:-40px;line-height:24px;display:table;}
 ul.notas li .img_frame {width:80px;height:80px;position:absolute;border-radius:50%;overflow:hidden;background:#F0F0F0;left:0px;top:0px;}
 ul.notas li .img_frame img {width:auto;height:100%;margin:0;position:absolute;top:-9999px;bottom:-9999px;left:-9999px;right:-9999px;margin:auto;}
 
+ul.notas li div._info {display:table-cell;vertical-align:middle;}
 ul.notas li h5 {padding-left:95px;}
 ul.notas li span {padding-left:95px;display:block;font-size:14px;opacity:0.75;}
 ul.notas li h5 a {text-decoration:none;border:none;}
