--- a/elections/style-elections.css
+++ b/elections/style-elections.css
@@ -87,13 +87,13 @@ footer ul li {margin:0;list-style:none;float:left;height:44px;width:44px;margin-
 
 article {width:100%;text-align:center;margin-top:60px;}
 section {width:100%;max-width:740px;position:relative;display:inline-block;padding:0px 20px;text-align:left;margin-top:20px;}
-section:not(:last-of-type):after {content:"...";display:block;text-align:center;line-height:10px;letter-spacing:25px;margin-bottom:50px;color:#333;font-size:18px;}
+/*section:not(:last-of-type):after {content:"...";display:block;text-align:center;line-height:10px;letter-spacing:25px;margin-bottom:50px;color:#333;font-size:18px;}*/
 img {width:100%;}
 
 span.caption {display:block;text-align:center;}
 
 h1, h2 {font-family:'Alegreya Sans', sans-serif;font-weight:700;color:#333;margin:0;margin-bottom:5px;}
-h1 {font-size:38px;}
+h1 {font-size:42px;}
 h2 {font-size:28px;}
 h3 {font-size:24px;}
 p, li, table, blockquote {font-family:'Merriweather', serif;font-size:18px;line-height:34px;color:#333;margin-bottom:30px;}
@@ -144,6 +144,7 @@ nav.share a.wp {background:url(images/iconos.png) no-repeat;background-position:
 .overscreen .rotate img {display:inline-block;width:auto;height:auto;}
 .overscreen .rotate p {color:#EFEFEF;font-family:'Arial';margin-bottom:0;margin-top:10px;}
 
+h2.secc_title {text-align:center;font-family:'Roboto';text-transform:uppercase;font-size:34px;border-top:3px solid #333;border-bottom:3px solid #333;line-height:37px;padding:2px 0px 5px;margin:30px 0px 20px;}
 img.portada {width:100%;height:auto;margin-bottom:30px;}
 
 div.grid {width:100%;margin-bottom:35px;}
@@ -152,7 +153,7 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 
 /*MAPA 1*/
 
-#map1 {width:90%;max-width:1280px;margin:0 auto;margin-bottom:50px;}
+#map1 {width:90%;max-width:1280px;margin:0 auto;margin-top:20px;}
 
 #map1 svg {width:100%;position:relative;left:-2.5%;}
 #map1 svg text {font-size:7px;font-family:'Alegreya Sans', sans-serif;fill:#FFF;letter-spacing:0.03em;}
@@ -161,7 +162,7 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 #map1 svg .state:hover {fill:#333;}
 #map1 svg .state:hover :after {content:"hover";background:gold;width:100px;height:100px;position:absolute;left:0px;top:0px;}
 
-#map2 {width:90%;max-width:1280px;margin:0 auto;margin-bottom:50px;}
+#map2 {width:90%;max-width:1280px;margin:0 auto;margin-bottom:20px;}
 #map2 svg {width:100%;}
 
 #map2 svg polygon, #map2 svg polyline {stroke:#FFF;stroke-width:0.12rem;}
