--- a/ahorro-en-juguetes-navidad-2016/navidad.css
+++ b/ahorro-en-juguetes-navidad-2016/navidad.css
@@ -115,6 +115,13 @@ h1 a, h2 a {text-decoration:underline;}
 
 p.quote {padding-left:10px;border-left:3px solid rgba(0,0,0,.8);margin-top:20px;font-size:15px;line-height:19px;margin-bottom:4px;margin-left:10px;}
 
+nav.share {position:absolute;width:40px;left:-60px;font-size:8px;top:10px;}
+nav.share a {width:34px;height:34px;float:left;margin:5px;}
+nav.share a.fb {background:url(images/iconos.png) no-repeat;background-position:-5px -5px;background-size:42px auto;}
+nav.share a.tw {background:url(images/iconos.png) no-repeat;background-position:-5px -78px;background-size:42px auto;}
+nav.share a.wp {background:url(images/iconos.png) no-repeat;background-position:-5px -42px;background-size:42px auto;display:none;}
+nav.share a.em {background:url(images/colors.png) no-repeat;background-position:-80px 0px;}
+
 @media (max-width:600px) {
 	h1 {font-size:32px;width:80%;}
 	h2 {font-size:24px;width:80%;}
