--- a/elections/style-elections.css
+++ b/elections/style-elections.css
@@ -101,7 +101,7 @@ table {font-family:'Merriweather', serif;font-size:16px;line-height:30px;color:#
 span.caption {font-family:'Alegreya Sans', sans-serif;font-size:15px;color:rgba(0,0,0,.6);margin-top:5px;margin-bottom:30px;}
 
 section img {margin-top:25px;}
-section .fluid-width-video-wrapper {margin-bottom:35px;}
+section .fluid-width-video-wrapper {margin-bottom:40px;position:relative;top:15px;}
 
 a {text-decoration:none;color:inherit;}
 h1 a, h2 a, h3 a {text-decoration:underline;}
@@ -145,8 +145,8 @@ nav.share a.wp {background:url(images/iconos.png) no-repeat;background-position:
 .overscreen .rotate p {color:#EFEFEF;font-family:'Arial';margin-bottom:0;margin-top:10px;}
 
 h1 {display:none;}
-h2.secc_title {text-align:center;font-family:'Roboto';text-transform:uppercase;font-size:34px;border-top:3px solid #333;border-bottom:3px solid #333;line-height:37px;padding:2px 0px 5px;margin:30px 0px 20px;}
-img.portada {width:100%;height:auto;margin-bottom:30px;}
+h2.secc_title {text-align:center;font-family:'Roboto';text-transform:uppercase;font-size:34px;border-top:3px solid #333;border-bottom:3px solid #333;line-height:37px;padding:2px 0px 5px;margin:35px 0px 25px;}
+img.portada {width:100%;height:auto;margin-bottom:25px;}
 
 div.grid {width:100%;margin-bottom:35px;}
 div.grid_item {float:left;overflow:hidden;position:relative;height:0;cursor:pointer;}
@@ -196,7 +196,7 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .info_box table span:nth-of-type(1) {color:#003594;}
 .info_box table span:nth-of-type(2) {color:#EB0029;}
 
-.versus {margin-top:-55px;}
+.versus {margin-top:-35px;margin-bottom:-20px;}
 .versus .middle {float:left;width:50%;text-align:center;}
 .versus img {width:230px;height:auto;display:inline-block;}
 .versus .stats {position:relative;top:-24px;}
@@ -206,15 +206,35 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .stats h3 {font-family:'Relative-Bold';font-size:32px;margin:0;}
 .stats span {font-family:'Relative-Bold';font-size:18px;}
 
-.versus .barra {width:100%;height:42px;position:relative;top:-15px;}
-.versus .hc .barra {background:#003594;}
-.versus .dt .barra {background:#EB0029;}
+.versus .barra {width:100%;height:42px;position:relative;top:-15px;overflow:hidden;}
+.versus .barra div {height:42px;width:0%;position:absolute;top:0px;}
+.versus .hc .barra div {left:0px;background:#003594;}
+.versus .dt .barra div {right:0px;background:#EB0029;}
+.versus .hc .barra {background:#3A92FC;}
+.versus .dt .barra {background:#FC90AD;}
 .versus p {line-height:24px;margin:0;padding:0;text-align:center;font-family:'Relative-Bold';font-size:22px;position:relative;top:55px;}
+.versus p strong {font-size:36px;}
 
-ul.notas {list-style:none;margin:0;padding:0;border-left:2px dashed #C0C0C0;margin-left:42px;/*padding-top:30px;*/}
-ul.notas li {min-height:80px;position:relative;left:-42px;line-height:24px;display:table;}
-ul.notas li .img_frame {width:80px;height:80px;position:absolute;border-radius:50%;overflow:hidden;background:#F0F0F0;left:0px;top:0px;}
+.special_container {width:100%;padding:0px 20px;}
+.big_bar {width:100%;height:60px;margin-top:20px;display:none;}
+.big_bar.hc {background:#003594;}
+.big_bar.dt {background:#EB0029;}
+.big_bar div {height:60px;float:left;position:relative;}
+.big_bar div:nth-of-type(odd) {background:rgba(255,255,255,0.6);}
+.big_bar div:nth-of-type(even) {background:rgba(255,255,255,0.3);}
+.big_bar div:nth-of-type(3n) {background:rgba(255,255,255,0.1);}
+
+.big_bar div:after {content:attr(data-name);position:absolute;right:-10px;top:100%;font-family:'Relative-Bold';font-size:10px;background:rgba(0,0,0,0.7);color:#FFF;width:20px;height:20px;border-radius:50%;line-height:20px;text-align:center;margin-top:5px;opacity:0;}
+.big_bar div:hover::after {opacity:1;}
+
+ul.notas {list-style:none;margin:0;padding:0;border-left:2px dashed #C0C0C0;margin-left:41px;/*padding-top:30px;*/margin-top:30px;}
+ul.notas li {min-height:80px;position:relative;left:-41px;line-height:24px;display:table;}
+ul.notas li.hides {display:none;}
+ul.notas li .img_frame {width:80px;height:80px;position:absolute;border-radius:50%;overflow:hidden;background:#C0C0C0;left:0px;top:0px;}
 ul.notas li .img_frame img {width:auto;height:100%;margin:0;position:absolute;top:-9999px;bottom:-9999px;left:-9999px;right:-9999px;margin:auto;}
+
+ul.notas li.more {min-height:36px;cursor:pointer;}
+ul.notas li.more .img_frame {width:36px;height:36px;position:absolute;border-radius:50%;overflow:hidden;background:#C0C0C0;left:23px;top:0px;text-align:center;line-height:34px;color:#FFF;font-size:36px;}
 
 ul.notas li div._info {display:table-cell;vertical-align:middle;}
 ul.notas li h5 {padding-left:95px;}
