--- a/elections/style-elections.css
+++ b/elections/style-elections.css
@@ -259,6 +259,13 @@ ul.notas_nt li.more .img_frame {width:36px;height:36px;position:absolute;border-
 
 p.rules {opacity:0.75;font-size:14px;line-height:24px;margin-top:-10px;font-style:italic;}
 
+div.akamai {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 40px;
+}
+
 @media (max-width:900px) {
 	ins {display:none;}
 	nav.share {position:relative;width:100%;font-size:8px;height:60px;left:0px;top:0px;}
