--- a/elections/style-elections.css
+++ b/elections/style-elections.css
@@ -262,8 +262,9 @@ p.rules {opacity:0.75;font-size:14px;line-height:24px;margin-top:-10px;font-styl
 div.akamai {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 0;
     margin-bottom: 40px;
+    padding-bottom: 56%;
 }
 
 @media (max-width:900px) {
