--- a/elections/style-elections.css
+++ b/elections/style-elections.css
@@ -45,14 +45,6 @@ figure {margin:0;}
 
 /*** FONT FACE ***/
 
-@font-face {
-	font-family:'Relative-Bold';
-	src:url('fonts/Relative-Bold.eot');
-	src:local('☺'), url('fonts/Relative-Bold.woff') format('woff'), url('fonts/Relative-Bold.ttf') format('truetype'), url('fonts/Relative-Bold.svg') format('svg');
-	font-weight:bold;
-	font-style:normal;
-}
-
 /*** SIZING WITH REM ***/
 html { font-size:62.5%; } 
 body { font-size:14px; font-size:1.4rem; } /* =14px */
@@ -169,7 +161,7 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 #map2 svg g.gray8 polygon, #map2 svg g.gray8 polyline {fill:#222;}
 #map2 svg g.gray9 polygon, #map2 svg g.gray9 polyline {fill:#000;}
 
-#map2 svg g.label text {font-size:11px;font-family:'Relative-Bold';fill:#FFF;font-weight:bold;letter-spacing:0.05em;}
+#map2 svg g.label text {font-size:11px;font-family: 'Montserrat', sans-serif;fill:#FFF;font-weight:bold;letter-spacing:0.05em;}
 #map2 svg g.label circle {fill:#000;opacity:0.7;}
 
 #map2 svg g polygon, #map2 svg g polyline {-webkit-transition:.15s ease-in-out;-moz-transition:.15s ease-in-out;-o-transition:.15s ease-in-out;transition:.15s ease-in-out;}
@@ -178,10 +170,10 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .info_box {position:absolute;float:left;width:250px;background:#F9F9F9;text-align:left;padding:10px 5px 15px 14px;z-index:100;opacity:0;box-shadow:0px 0px 2px rgba(0,0,0,0.2);}
 .info_box.active {opacity:1;}
 .info_box:after {content:"";position:absolute;width:0; height:0; border-left:10px solid transparent;border-right:10px solid transparent;border-top:10px solid #F0F0F0;left:50%;bottom:-10px;margin-left:-10px;z-index:150;}
-.info_box h3 {font-family:'Relative-Bold';margin:0;color:#3F3F3F;margin-bottom:5px;}
+.info_box h3 {font-family: 'Montserrat', sans-serif;margin:0;color:#3F3F3F;margin-bottom:5px;}
 .info_box table {table-layout:auto;margin-bottom:0px;}
 .info_box table tr {background:none;border:0;}
-.info_box table th, .info_box table td {padding:0;font-family:'Relative-Bold';border:0;}
+.info_box table th, .info_box table td {padding:0;font-family: 'Montserrat', sans-serif;border:0;}
 .info_box table th {color:#666;}
 .info_box table td {color:#3F3F3F;padding-left:10px;}
 .info_box table td.subt {padding-left:0px;}
@@ -194,9 +186,9 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .versus .stats {position:relative;top:-20px;}
 .versus .hc .stats {text-align:left;color:#003594;}
 .versus .dt .stats {text-align:right;color:#EB0029;}
-.stats h5 {font-family:'Relative-Bold';font-size:44px;}
-.stats h3 {font-family:'Relative-Bold';font-size:32px;margin:0;}
-.stats span {font-family:'Relative-Bold';font-size:18px;}
+.stats h5 {font-family: 'Montserrat', sans-serif;font-size:44px;}
+.stats h3 {font-family: 'Montserrat', sans-serif;font-size:32px;margin:0;}
+.stats span {font-family: 'Montserrat', sans-serif;font-size:18px;font-weight:bold;}
 
 .versus .meta {width:4px;height:42px;position:absolute;bottom:15px;left:-2px;background:#FFF;border:2px dashed #000;}
 .versus .meta:after {content:"270";position:absolute;bottom:105%;width:44px;background:gold;font-family:'Roboto';font-weight:bold;left:50%;margin-left:-22px;margin-bottom:10px;font-size:18px;}
@@ -206,7 +198,7 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .versus .dt .barra div {right:0px;background:#EB0029;}
 .versus .hc .barra {background:#bfbfbf;}
 .versus .dt .barra {background:#bfbfbf;}
-.versus p {line-height:24px;margin:0;padding:0;text-align:center;font-family:'Relative-Bold';font-size:22px;position:relative;top:55px;}
+.versus p {line-height:24px;margin:0;padding:0;text-align:center;font-family: 'Montserrat', sans-serif;font-size:22px;position:relative;top:55px;}
 .versus p strong {font-size:36px;}
 
 .special_container {width:100%;padding:0px 20px;position:relative;top:15px;}
@@ -218,7 +210,7 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 .big_bar div:nth-of-type(even) {background:rgba(255,255,255,0.3);}
 .big_bar div:nth-of-type(3n) {background:rgba(255,255,255,0.1);}
 
-.big_bar div:after {content:attr(data-name);position:absolute;right:-10px;top:100%;font-family:'Relative-Bold';font-size:10px;background:rgba(0,0,0,0.7);color:#FFF;width:20px;height:20px;border-radius:50%;line-height:20px;text-align:center;margin-top:5px;opacity:0;}
+.big_bar div:after {content:attr(data-name);position:absolute;right:-10px;top:100%;font-family: 'Montserrat', sans-serif;font-size:10px;background:rgba(0,0,0,0.7);color:#FFF;width:20px;height:20px;border-radius:50%;line-height:20px;text-align:center;margin-top:5px;opacity:0;}
 .big_bar div:hover::after {opacity:1;}
 
 ul.notas {list-style:none;margin:0;padding:0;border-left:2px dashed #C0C0C0;margin-left:41px;/*padding-top:30px;*/margin-top:30px;}
