--- a/elections1/style-elections.css
+++ b/elections1/style-elections.css
@@ -165,9 +165,9 @@ div.grid_item img {width:100%;height:auto;margin:0;position:absolute;top:-9999px
 #map2 svg g.label circle {fill:#000;opacity:0.7;}
 
 #map2 svg g polygon, #map2 svg g polyline {-webkit-transition:.15s ease-in-out;-moz-transition:.15s ease-in-out;-o-transition:.15s ease-in-out;transition:.15s ease-in-out;}
-#map2 svg g:hover polygon, #map2 svg g:hover polyline {fill:#8c8c99;stroke:#333;}
+#map2 svg g:hover polygon, #map2 svg g:hover polyline {fill:#8c8c99;}
 
-.info_box {position:absolute;float:left;background:#F9F9F9;text-align:left;padding:10px 18px 15px 14px;z-index:100;opacity:0;box-shadow:0px 0px 2px rgba(0,0,0,0.5);}
+.info_box {position:absolute;float:left;background:#F9F9F9;text-align:left;padding:10px 18px 15px 14px;z-index:100;opacity:0;box-shadow:0px 0px 2px rgba(0,0,0,0.2);}
 .info_box.active {opacity:1;}
 .info_box:after {content:"";position:absolute;width:0; height:0; border-left:10px solid transparent;border-right:10px solid transparent;border-top:10px solid #F0F0F0;left:50%;bottom:-10px;margin-left:-10px;z-index:150;}
 .info_box h3 {font-family: 'Montserrat', sans-serif;margin:0;color:#3F3F3F;margin-bottom:5px;}
